@@ -1,0 +1,3 @@
+Test for bug 23007: Timer-related crash when closing Web Inspector.
+
+PASS if no crash.
