@@ -1,5 +1,17 @@
 2008-12-28  Alexey Proskuryakov  <ap@webkit.org>
 
+        Reviewed by Darin Adler.
+
+        https://bugs.webkit.org/show_bug.cgi?id=23007
+        REGRESSION: Timer-related crash when closing Web Inspector
+
+        Test: fast/dom/Window/remove-timeout-crash.html
+
+        * bindings/js/DOMTimer.cpp: (WebCore::DOMTimer::fired): Besides deleting the timer, make
+        sure to remove it from a Document map.
+
+2008-12-28  Alexey Proskuryakov  <ap@webkit.org>
+
         Reviewed by Anders Carlsson.
 
         https://bugs.webkit.org/show_bug.cgi?id=23012
