@@ -1,5 +1,15 @@
 2008-12-28  Alexey Proskuryakov  <ap@webkit.org>
 
+        Reviewed by Darin Adler.
+
+        https://bugs.webkit.org/show_bug.cgi?id=23007
+        REGRESSION: Timer-related crash when closing Web Inspector
+
+        * fast/dom/Window/remove-timeout-crash-expected.txt: Added.
+        * fast/dom/Window/remove-timeout-crash.html: Added.
+
+2008-12-28  Alexey Proskuryakov  <ap@webkit.org>
+
         Reviewed by Anders Carlsson.
 
         https://bugs.webkit.org/show_bug.cgi?id=23012
